# wolf

./: .gitignore  HEADLESS_SCRAPER_GUIDE.md  README.md  debug_page_inspector.py  download_with_headless.py  example_headless_scraper.py  gen9vgc2024regg-2194787570.json  pyproject.toml
scripts/: showdown_worker.js
showdown_ai/: __init__.py  agents.py  engine.py  headless_scraper.py  logs.py  state.py
tests/: test_logs.py
